Reload when lines were deleted in the file, instead of just..not.

Seek the stream back to 0 when we get a dirty notifier and there's no
more data. It's *probably* because there were deleted lines. It at least
works well for this particular scenario. I believe that's the best way
to "go backwards" in terms of a file buffer.

BUG: 224772